--- a/public/css/style_night.css
+++ b/public/css/style_night.css
@@ -131,6 +131,13 @@ button:hover, button:focus {
 .switch {
   margin-left: 6rem;
 }
+.switch:hover > div {
+  border-color: white;
+}
+.switch:hover > div:before {
+  background-image: url(../../graphismes/icones/icon/sun-icon-01.png);
+  background-color: white;
+}
 
 .switch .checkbox {
   opacity: 0;
@@ -139,7 +146,7 @@ button:hover, button:focus {
 .switch > div {
   width: 40px;
   height: 15px;
-  background: white;
+  border: 1px solid #F8CA70;
   z-index: 0;
   cursor: pointer;
   position: relative;
@@ -152,9 +159,9 @@ button:hover, button:focus {
 }
 
 .switch > input:checked + div {
-  background: rgba(255, 255, 255, 0.5);
   text-align: left;
   color: rgba(255, 255, 255, 0.75);
+  border: 1px solid white;
 }
 
 .switch > div:before {
@@ -163,11 +170,12 @@ button:hover, button:focus {
   border-radius: 50%;
   transition: all 200ms;
   position: absolute;
-  top: -2px;
+  top: -3px;
   height: 20px;
   width: 20px;
   left: 21px;
-  background: black;
+  background: #F8CA70;
+  border: 1px solid #040120;
   background-image: url(../../graphismes/icones/icon/moon-icon-01.png);
   background-position: center;
   background-size: cover;
@@ -177,8 +185,8 @@ button:hover, button:focus {
   content: "";
   position: absolute;
   border-radius: 50%;
-  left: 0;
-  background: #040120;
+  left: -3px;
+  background: white;
   background-image: url(../../graphismes/icones/icon/sun-icon-01.png);
   background-position: center;
   background-size: cover;
